# mips-uclibc-hello-rust

./: Cargo.toml  HowToSetupUcLibC.md  README.md  config.toml  my_NOTE_for_build_libhv_for_target.md
.cargo/: config.toml
src/: main.rs
